fix navbar and improve spacing

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -79,8 +79,11 @@ header p.professional-links a {
       padding-right: 20px;
     }
 
+    // To squish the text together a bit in the mobile view.
+    header p {
+        margin-block: 0.25em;
+    }
 
-  
     header .avatar {
         margin: auto;
     } 
